...
        itunesId = payload.itunesId,
        itunesArtistId = payload.itunesArtistId,
        language = uiState.language,
        explicit = uiState.explicit,
        type = uiState.type,
      )
    val media = CreatePodcastRequest.Media(metadata, uiState.autoDownload)
    val request =
      CreatePodcastRequest(
        path = path,
        folderId = folderId,
        libraryId = payload.libraryId,
        media = media,
...
